--- a/styles.css
+++ b/styles.css
@@ -3,59 +3,60 @@ html {
 }
 
 body {
-   background-color: #2F3035;
+   background-color: #ffffff;
 }
 
 .container {
    margin-left: auto;
    margin-right: auto;
-   width: 500px;
+   width: auto;
    text-align: center;
 }
 
 header {
-   background-color: green;
-   height: 150px;
+   background-color: #ced7f3;
+   height: auto;
    padding-top: 10px;
    padding-bottom: 10px;
 }
 
 nav{
    background-color: rgba(0, 0, 0, 0.2);
-   height: 25px;
+   height: auto;
    padding-top: 15px;
    padding-bottom: 15px;
 }
 
 main{
-   background-color: orange;
-   height: 400px;
+   background-color: #ced7f3;
+   height: 1000px;
    padding-top: 50px;
    padding-right: 100px;
    padding-left: 100px;
+   text-align: left;
 }
 
 footer{
-   background-color: rgba(0, 0, 0, 0.39);
-   height: 80px;
+   background-color: rgba(0, 0, 0, 0.30);
+   height: auto;
    padding-top: 10px;
-   padding-bottom: 10px;
+   padding-bottom: 20px;
 }
 
 h1 {
    font-size: 40px;
-   color: white;
+   color: black;
    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
-   color: white;
+   color: black;
    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
    font-size: 20px;
-   color: white;
+   color: black;
    font-family: Arial, Helvetica, sans-serif;
 }
 
