--- a/styles.css
+++ b/styles.css
@@ -3,44 +3,81 @@ html {
 }
 
 body {
-   background-color: #ffffff;
+   background-color: #f5f6fa;
 }
 
 .container {
-   margin-left: auto;
-   margin-right: auto;
+   /* margin-left: auto;
+   margin-right: auto; */
    width: auto;
+   height: auto;
    text-align: center;
 }
 
 header {
-   background-color: #ced7f3;
-   height: auto;
+   background-color: #f5f6fa;
    padding-top: 10px;
    padding-bottom: 10px;
 }
 
 nav{
    background-color: rgba(0, 0, 0, 0.2);
-   height: auto;
    padding-top: 15px;
    padding-bottom: 15px;
 }
 
 main{
-   background-color: #ced7f3;
-   height: 1000px;
+   background-color: #f5f6fa;
    padding-top: 50px;
-   padding-right: 100px;
-   padding-left: 100px;
+   padding-bottom: 10px;
    text-align: left;
+   color: #676767;
+   font-family: Arial, Helvetica, sans-serif;
+   display: flex;
+	flex-direction: column;
+	align-items: center;
+   justify-content: center;
+   margin-left: 35%;
+   margin-right: 35%;
+   margin-bottom: 5%;
 }
 
 footer{
    background-color: rgba(0, 0, 0, 0.30);
-   height: auto;
    padding-top: 10px;
    padding-bottom: 20px;
+}
+
+form {
+   align-items: center;
+   text-align: center;
+}
+
+.form {
+   width: 360px;
+   background: #ffffff;
+   font-family: Arial, Helvetica, sans-serif;
+   box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
+   border: 0;
+	outline: 0;
+   padding: 22px 18px;
+   text-align: left;
+}
+
+input[type=button] {
+   background-color: #7f8ff4;
+   border: none;
+   color: white;
+   cursor: pointer;
+   text-decoration: none;
+   box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
+   border-radius: 2px;
+   padding: 12px 36px;
+   margin-left: -96px;
+}
+
+input[type=button]:hover {
+   background-color: #697bf5;
 }
 
 h1 {
@@ -50,21 +87,29 @@ h1 {
 }
 
 a {
-   color: black;
+   color: #676767;
    font-family: Arial, Helvetica, sans-serif;
+}
+
+a:hover {
+   color: #201f1f;
 }
 
 p {
    font-size: 20px;
-   color: black;
+   color: #676767;
    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav a {
    text-decoration: none;
    font-size: 15px;
-   padding-left: 10px;
-   padding-right: 10px;
+   padding-left: 15px;
+   padding-right: 15px;
+}
+
+nav a:hover {
+   color: #4b4a4a;
 }
 
 footer p {
@@ -75,3 +120,10 @@ footer p {
    padding-left: 10px;
    padding-right: 10px;
 }
+
+/* .box1{
+   border: 0;
+	outline: 0;
+   padding: 10px 18px;
+   box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
+} */
