--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ header {
    background-color: #f5f6fa;
    padding-top: 10px;
    padding-bottom: 10px;
+   margin-left: 25%;
+   margin-right: 25%;
 }
 
 nav{
@@ -37,8 +39,8 @@ main{
 	flex-direction: column;
 	align-items: center;
    justify-content: center;
-   margin-left: 35%;
-   margin-right: 35%;
+   margin-left: 25%;
+   margin-right: 25%;
    margin-bottom: 5%;
 }
 
@@ -119,6 +121,16 @@ footer p {
 .padded {
    padding-left: 10px;
    padding-right: 10px;
+}
+
+.centered {
+   text-align: center;
+}
+
+.qr-wrapper {
+   display: flex;
+    text-align: center;
+    justify-content: center;
 }
 
 /* .box1{
