--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ input[type=button] {
    border-radius: 2px;
    padding: 12px 36px;
    margin-left: -95px;
+   -webkit-appearance: none;
 }
 
 input[type=button]:hover {
