--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,152 @@
 html {
-   height: 100%;
+  height: 100%;
 }
 
 body {
-   background-color: #f5f6fa;
+  background-color: #f5f6fa;
 }
 
 .container {
-   /* margin-left: auto;
+  /* margin-left: auto;
    margin-right: auto; */
-   width: auto;
-   height: auto;
-   text-align: center;
+  width: auto;
+  height: auto;
+  text-align: center;
 }
 
 header {
-   background-color: #f5f6fa;
-   padding-top: 10px;
-   padding-bottom: 10px;
-   margin-left: 25%;
-   margin-right: 25%;
+  background-color: #f5f6fa;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
-nav{
-   background-color: rgba(0, 0, 0, 0.2);
-   padding-top: 15px;
-   padding-bottom: 15px;
+nav {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
-main{
-   background-color: #f5f6fa;
-   padding-top: 50px;
-   padding-bottom: 10px;
-   text-align: left;
-   color: #676767;
-   font-family: Arial, Helvetica, sans-serif;
-   display: flex;
-	flex-direction: column;
-	align-items: center;
-   justify-content: center;
-   margin-left: 20%;
-   margin-right: 20%;
-   margin-bottom: 5%;
+main {
+  background-color: #f5f6fa;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  text-align: left;
+  color: #676767;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 5%;
 }
 
-footer{
-   background-color: rgba(0, 0, 0, 0.30);
-   padding-top: 10px;
-   padding-bottom: 20px;
+footer {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 form {
-   align-items: center;
-   text-align: center;
+  align-items: center;
+  text-align: center;
 }
 
 .form {
-   width: 280px;
-   background: #ffffff;
-   font-family: Arial, Helvetica, sans-serif;
-   box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
-   border: 0;
-	outline: 0;
-   padding: 22px 18px;
-   text-align: left;
+  width: 300px;
+  background: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  border: 0;
+  outline: 0;
+  padding: 22px 18px;
+  text-align: left;
 }
 
-input[type=button] {
-   background-color: #7f8ff4;
-   border: none;
-   color: white;
-   cursor: pointer;
-   text-decoration: none;
-   box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
-   border-radius: 2px;
-   padding: 12px 36px;
-   margin-left: -95px;
-   -webkit-appearance: none;
+input[type="button"] {
+  background-color: #7f8ff4;
+  border: none;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 12px 36px;
+  margin-left: -120px;
+  -webkit-appearance: none;
 }
 
-input[type=button]:hover {
-   background-color: #697bf5;
+input[type="button"]:hover {
+  background-color: #697bf5;
 }
 
 h1 {
-   font-size: 40px;
-   color: black;
-   font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
-   color: #676767;
-   font-family: Arial, Helvetica, sans-serif;
+  color: #676767;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a:hover {
-   color: #201f1f;
+  color: #201f1f;
 }
 
 p {
-   font-size: 20px;
-   color: #676767;
-   font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #676767;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+   display: inline-block; 
+	text-align: left; 
+}
+
+ol {
+   display: inline-block; 
+	text-align: left; 
 }
 
 nav a {
-   text-decoration: none;
-   font-size: 15px;
-   padding-left: 15px;
-   padding-right: 15px;
+  text-decoration: none;
+  font-size: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 nav a:hover {
-   color: #4b4a4a;
+  color: #4b4a4a;
 }
 
 footer p {
-   font-size: 15px;
+  font-size: 15px;
 }
 
 .padded {
-   padding-left: 10px;
-   padding-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .centered {
-   text-align: center;
+  text-align: center;
+}
+
+.spacer {
+   margin-top: 40px;
+   margin-bottom: 40px;
 }
 
 .qr-wrapper {
-   display: flex;
-    text-align: center;
-    justify-content: center;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 
 /* .box1{
