--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,10 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 5%;
+  max-width: 600px;
 }
 
 footer {
@@ -105,13 +106,13 @@ p {
 }
 
 ul {
-   display: inline-block; 
-	text-align: left; 
+  display: inline-block;
+  text-align: left;
 }
 
 ol {
-   display: inline-block; 
-	text-align: left; 
+  display: inline-block;
+  text-align: left;
 }
 
 nav a {
@@ -135,12 +136,13 @@ footer p {
 }
 
 .centered {
+  margin-top: 40px;
   text-align: center;
 }
 
 .spacer {
-   margin-top: 40px;
-   margin-bottom: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .qr-wrapper {
@@ -149,9 +151,22 @@ footer p {
   justify-content: center;
 }
 
-/* .box1{
-   border: 0;
-	outline: 0;
-   padding: 10px 18px;
-   box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
-} */
+.passwordError {
+  color: red;
+  margin-top: 10px;
+  font-style: italic;
+  margin-left: 150px;
+}
+
+.submitresponse {
+  color: green;
+  margin-top: 10px;
+  font-style: italic;
+  margin-left: 150px;
+}
+
+.small {
+  margin-top: 75px;
+  text-align: center;
+  font-size: 15px;
+}
